--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    html, body{
+      margin: 0;
+      height: 100%;
+    }
+    #root{
+      height:100%;
+      width:100%;
+      position: absolute;
+    }
+    </style>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -26,9 +37,9 @@
     -->
     <title>1301 Personal Narrative Blog</title>
   </head>
-  <body>
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="height:100%"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
